force-app/main/default/objects/Demo_Cleanup_Task__c/Demo_Cleanup_Task__c.object-meta.xml
<CustomObject>
    <description>A specification for the deletion of an object&apos;s records as part of a demo cleanup.</description>
    <label>Demo Cleanup Task</label>
    <nameField>
        <displayFormat>DCT-{0000}</displayFormat>
        <label>Demo Cleanup Task ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Demo Cleanup Tasks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>