force-app/main/default/objects/Demo_Cleanup_Task__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>A description of the demo cleanup item, for example, &quot;Delete all records that are not custom-crafted for the demo scenario&quot;.</description>
    <inlineHelpText>A description of the demo cleanup item, for example, &quot;Delete all records that are not custom-crafted for the demo scenario&quot;.</inlineHelpText>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>