force-app/main/default/objects/Demo_Cleanup_Task__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <description>The order in which this Demo Cleanup Task will be executed.</description>
    <inlineHelpText>The order in which this Demo Cleanup Task will be executed.</inlineHelpText>
    <label>Order</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>