force-app/main/default/objects/Demo_Cleanup_Task__c/fields/Order_in_List__c.field-meta.xml
<CustomField>
    <fullName>Order_in_List__c</fullName>
    <description>The order in which the item is to be executed.</description>
    <inlineHelpText>The order in which the item is to be executed.</inlineHelpText>
    <label>Order in List</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>