force-app/main/default/objects/Demo_Cleanup_Task__c/fields/SOQL_WHERE_Clause__c.field-meta.xml
<CustomField>
    <fullName>SOQL_WHERE_Clause__c</fullName>
    <description>A SOQL WHERE clause expression (without the &quot;WHERE&quot;) that evaluates to &quot;true&quot; if a record should be deleted, for example, &quot;Hand_Crafted_for_Demo_Scenario__c = false&quot;. Leave blank if all records of this object are to be deleted.</description>
    <inlineHelpText>A SOQL WHERE clause expression (without the &quot;WHERE&quot;) that evaluates to &quot;true&quot; if a record should be deleted, for example, &quot;Hand_Crafted_for_Demo_Scenario__c = false&quot;. Leave blank if all records of this object are to be deleted.</inlineHelpText>
    <label>SOQL WHERE Clause</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>