force-app/main/default/objects/Demo_Cleanup_Task__c/recordTypes/Apex_Cleanup_Item.recordType-meta.xml
<RecordType>
    <fullName>Apex_Cleanup_Item</fullName>
    <active>true</active>
    <description>Demo cleanup item is an Apex class specification.</description>
    <label>Apex Cleanup Item</label>
</RecordType>