force-app/main/default/objects/Demo_Cleanup_Task__c/recordTypes/Apex_Cleanup_Task.recordType-meta.xml
<RecordType>
    <fullName>Apex_Cleanup_Task</fullName>
    <active>true</active>
    <description>Demo cleanup task is an Apex class specification.</description>
    <label>Apex Cleanup Task</label>
</RecordType>