force-app/main/default/objects/Demo_Cleanup_Task__c/recordTypes/Flow_Cleanup_Item.recordType-meta.xml
<RecordType>
    <fullName>Flow_Cleanup_Item</fullName>
    <active>true</active>
    <description>Demo cleanup item is an autolaunched flow</description>
    <label>Flow Cleanup Item</label>
</RecordType>