force-app/main/default/objects/Demo_Cleanup_Task__c/recordTypes/Flow_Cleanup_Task.recordType-meta.xml
<RecordType>
    <fullName>Flow_Cleanup_Task</fullName>
    <active>true</active>
    <description>Demo cleanup task is an autolaunched flow.</description>
    <label>Flow Cleanup Task</label>
</RecordType>