force-app/main/default/objects/Demo_Cleanup_Task__c/recordTypes/SOQL_Cleanup_Item.recordType-meta.xml
<RecordType>
    <fullName>SOQL_Cleanup_Item</fullName>
    <active>true</active>
    <description>Demo cleanup item is based on a SOQL query.</description>
    <label>SOQL Cleanup Item</label>
</RecordType>