force-app/main/default/objects/Demo_Cleanup_Task__c/recordTypes/SOQL_Cleanup_Task.recordType-meta.xml
<RecordType>
    <fullName>SOQL_Cleanup_Task</fullName>
    <active>true</active>
    <description>Demo cleanup task is based on a SOQL query.</description>
    <label>SOQL Cleanup Task</label>
</RecordType>