force-app/main/default/objects/Demo_Cleanup_Task__c/validationRules/For_Flow_Task_Flow_Name_Is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>For_Flow_Task_Flow_Name_Is_Required</fullName>
    <active>true</active>
    <description>Each flow Demo Cleanup Task must include the flow name.</description>
    <errorConditionFormula>RecordType.Name == &quot;Flow Cleanup Item&quot; &amp;&amp; ISBLANK(Flow_API_Name__c)</errorConditionFormula>
    <errorDisplayField>Flow_API_Name__c</errorDisplayField>
    <errorMessage>For a flow cleanup task, the flow name must be specified.</errorMessage>
</ValidationRule>