force-app/main/default/objects/Demo_Cleanup_Task__c/validationRules/For_SOQL_Task_Object_Name_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>For_SOQL_Task_Object_Name_Required</fullName>
    <active>true</active>
    <description>For a SOQL cleanup task, an object API name is required</description>
    <errorConditionFormula>RecordType.Name == &apos;SOQL Cleanup Item&apos; &amp;&amp; ISBLANK(Object_API_Name__c)</errorConditionFormula>
    <errorDisplayField>Object_API_Name__c</errorDisplayField>
    <errorMessage>For a SOQL cleanup task, the object API name must be specified.</errorMessage>
</ValidationRule>