force-app/main/default/objects/Demo_Cleanup_Task__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Active__c</columns>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Description__c</columns>
    <columns>Apex_Class_Name__c</columns>
    <columns>Object_API_Name__c</columns>
    <columns>SOQL_WHERE_Clause__c</columns>
    <columns>Permanently_Delete__c</columns>
    <filterScope>Mine</filterScope>
    <label>All</label>
</ListView>